all webcams are listed twice on Linux
Categories
(Core :: WebRTC: Audio/Video, defect, P3)
Tracking
()
People
(Reporter: robert, Assigned: dminor)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:75.0) Gecko/20100101 Firefox/75.0
Steps to reproduce:
- Go to https://mozilla.github.io/webrtc-landing/gum_test.html
- Click on Camera
- Notice that all webcams are shown twice (double) on Linux
Actual results:
All webcams are shown twice (see screenshot attached).
Expected results:
Every webcam should be listed only once.
Firefox must filter the list of webcam devices according to the device capabilities. This topic has been discussed in the Kernel Bugzilla. See this comment:
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Assignee | ||
Comment 2•5 years ago
|
||
Thank you for the bug report!
As far as I can tell, this bug is also present in the upstream libwebrtc video capture code. Chrome does not seem to be affected, I'm guessing they're using the video capture implementation here [1] rather than the one in libwebrtc. We should probably fix upstream libwebrtc and then backport to Firefox.
I found that Google Chrome 81.0.4044.138 on Linux is also affected.
(In reply to robert from comment #3)
I found that Google Chrome 81.0.4044.138 on Linux is also affected.
Not true. I mixed up bug report numbers. Sorry for the noise.
Assignee | ||
Comment 5•5 years ago
|
||
The side effect of not filtering on V4L2_CAP_VIDEO_CAPTURE is that every device
is enumerated twice. Because we look up devices by name, and the device that
supports V4L2_CAP_VIDEO_CAPTURE seems to always appear first in /dev/video,
this does not seem to end up with us ever choosing an inappropriate device. We
might get away with just filtering device names from the list, but if the order
of devices ever changed in /dev/video there could be problems.
Assignee | ||
Comment 6•5 years ago
|
||
Try job here: https://treeherder.mozilla.org/#/jobs?repo=try&author=dminor%40mozilla.com I meant to only run linux builds, but messed up the try fuzzy syntax.
Comment 8•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Assignee | ||
Comment 9•5 years ago
|
||
Upstream issue: https://bugs.chromium.org/p/webrtc/issues/detail?id=11641
Upstream review: https://webrtc-review.googlesource.com/c/src/+/176460
Description
•