Bug 1637319 - Only enumerate capture devices on Linux that support V4L2_CAP_VIDEO_CAPTURE; r=ng

The side effect of not filtering on V4L2_CAP_VIDEO_CAPTURE is that every device
is enumerated twice. Because we look up devices by name, and the device that
supports V4L2_CAP_VIDEO_CAPTURE seems to always appear first in /dev/video,
this does not seem to end up with us ever choosing an inappropriate device. We
might get away with just filtering device names from the list, but if the order
of devices ever changed in /dev/video there could be problems.

Differential Revision: https://phabricator.services.mozilla.com/D75593